Moves z-index of search bar to 10000 to prevent overlapping content

--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -121,7 +121,7 @@ b {
   position: fixed;
   color: white;
   width: 100%;
-  z-index: 1;
+  z-index: 10000 !important;
   .search {
     border-color: $light-gray;
     border-radius: 0 3.5px;
